objects/SLCA2__CA_UserSettings__c.object
<CustomObject>
    <fields>
        <fullName>SLCA2__Namespace__c</fullName>
        <description>Namespace for session variable</description>
        <label>Namespace</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CA_UserSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLCA2__Value__c</fullName>
        <description>Serialized value (JSON)</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__filterBy__c</fullName>
        <label>filterBy</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__objectName__c</fullName>
        <label>objectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__pageNumber__c</fullName>
        <label>pageNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLCA2__sortDirection__c</fullName>
        <label>sortDirection</label>
        <picklist>
            <picklistValues>
                <fullName>ASC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DESC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLCA2__sortFieldName__c</fullName>
        <label>sortFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA_UserSettings</label>
    <listViews>
        <fullName>SLCA2__All</fullName>
        <columns>SLCA2__Namespace__c</columns>
        <columns>SLCA2__Value__c</columns>
        <columns>SLCA2__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CA_UserSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_UserSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>